--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Testcases.VerifyProduct</td>
+<td>Testcases.Productavailability</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>availabilityofproduct</td>
-<td>smoke </td>
+<td>product</td>
+<td>Regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
