--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>VerifyProduct.availabilityofproduct(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.VerifyProduct@5b03b9fe]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>Productavailability.product(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Productavailability@5b03b9fe]<br/></td></tr>
 </table>
