--- a/test-output/index.html
+++ b/test-output/index.html
@@ -109,7 +109,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Testcases.Loginpagetest" class="method navigator-link" hash-for-method="loginpage(kjlskjdljs, jshdjklsd, bothwrong)">loginpage(kjlskjdljs, jshdjklsd, bothwrong)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Testcases.Loginpagetest" class="method navigator-link" hash-for-method="loginpage(9701763306, prava@56789, registered user)">loginpage(9701763306, prava@56789, registered user)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="Testcases.Loginpagetest" class="method navigator-link" hash-for-method="loginpage(7386765247, rama@1234, unregistered user)">loginpage(7386765247, rama@1234, unregistered user)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -119,12 +124,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Testcases.Loginpagetest" class="method navigator-link" hash-for-method="loginpage(9701763306, prava@56789, registered user)">loginpage(9701763306, prava@56789, registered user)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Testcases.Loginpagetest" class="method navigator-link" hash-for-method="loginpage(7386765247, rama@1234, unregistered user)">loginpage(7386765247, rama@1234, unregistered user)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Testcases.Loginpagetest" class="method navigator-link" hash-for-method="loginpage(kjlskjdljs, jshdjklsd, bothwrong)">loginpage(kjlskjdljs, jshdjklsd, bothwrong)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -168,22 +168,6 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Testcases.Productavailability</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="product(9701763306, prava@56789, registered user)">
-                  </a> <!-- product(9701763306, prava@56789, registered user) -->
-                  <span class="method-name">product</span>
-                  <span class="parameters">(9701763306, prava@56789, registered user)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">Testcases.Demo</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -205,22 +189,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginpage(kjlskjdljs, jshdjklsd, bothwrong)">
-                  </a> <!-- loginpage(kjlskjdljs, jshdjklsd, bothwrong) -->
-                  <span class="method-name">loginpage</span>
-                  <span class="parameters">(kjlskjdljs, jshdjklsd, bothwrong)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginpage( ,  , nill)">
-                  </a> <!-- loginpage( ,  , nill) -->
-                  <span class="method-name">loginpage</span>
-                  <span class="parameters">( ,  , nill)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="loginpage(9701763306, prava@56789, registered user)">
                   </a> <!-- loginpage(9701763306, prava@56789, registered user) -->
                   <span class="method-name">loginpage</span>
@@ -235,6 +203,38 @@
                   <span class="parameters">(7386765247, rama@1234, unregistered user)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginpage( ,  , nill)">
+                  </a> <!-- loginpage( ,  , nill) -->
+                  <span class="method-name">loginpage</span>
+                  <span class="parameters">( ,  , nill)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginpage(kjlskjdljs, jshdjklsd, bothwrong)">
+                  </a> <!-- loginpage(kjlskjdljs, jshdjklsd, bothwrong) -->
+                  <span class="method-name">loginpage</span>
+                  <span class="parameters">(kjlskjdljs, jshdjklsd, bothwrong)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">Testcases.Productavailability</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="product(9701763306, prava@56789, registered user)">
+                  </a> <!-- product(9701763306, prava@56789, registered user) -->
+                  <span class="method-name">product</span>
+                  <span class="parameters">(9701763306, prava@56789, registered user)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
@@ -246,11 +246,11 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite thread-count=&quot;8&quot; parallel=&quot;tests&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite thread-count=&quot;8&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;resources.Listenerclass&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;Testcases.Productavailability&quot;/&gt;
       &lt;class name=&quot;Testcases.VerifyProduct&quot;/&gt;
@@ -327,36 +327,36 @@ data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginpage')
 data.setCell(0, 2, 'Testcases.Loginpagetest')
-data.setCell(0, 3, 26534);
+data.setCell(0, 3, 28447);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'product')
 data.setCell(1, 2, 'Testcases.Productavailability')
-data.setCell(1, 3, 23117);
+data.setCell(1, 3, 25379);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'availabilityofproduct')
 data.setCell(2, 2, 'Testcases.VerifyProduct')
-data.setCell(2, 3, 11148);
+data.setCell(2, 3, 12395);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'verifyLogo')
 data.setCell(3, 2, 'Testcases.Demo')
-data.setCell(3, 3, 6295);
+data.setCell(3, 3, 6088);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'loginpage')
 data.setCell(4, 2, 'Testcases.Loginpagetest')
-data.setCell(4, 3, 6221);
+data.setCell(4, 3, 5886);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'loginpage')
 data.setCell(5, 2, 'Testcases.Loginpagetest')
-data.setCell(5, 3, 6120);
+data.setCell(5, 3, 5735);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'loginpage')
 data.setCell(6, 2, 'Testcases.Loginpagetest')
-data.setCell(6, 3, 5790);
+data.setCell(6, 3, 5485);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -416,103 +416,103 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">initialization</span>
-                <span class="method-start">686 ms</span>
+                <span class="method-start">692 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">product(9701763306, prava@56789, registered user)</span>
-                <span class="method-start">11522 ms</span>
+                <span class="method-start">10072 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closur</span>
-                <span class="method-start">34665 ms</span>
+                <span class="method-start">35478 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Testcases.VerifyProduct</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initialization</span>
-                <span class="method-start">35544 ms</span>
+                <span class="method-start">36254 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">availabilityofproduct(9701763306, prava@56789, registered user)</span>
-                <span class="method-start">43093 ms</span>
+                <span class="method-start">42967 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closur</span>
-                <span class="method-start">54245 ms</span>
+                <span class="method-start">55369 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Testcases.Demo</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initialization</span>
-                <span class="method-start">55062 ms</span>
+                <span class="method-start">56131 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLogo(9701763306, prava@56789, registered user)</span>
-                <span class="method-start">61903 ms</span>
+                <span class="method-start">62224 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closur</span>
-                <span class="method-start">68206 ms</span>
+                <span class="method-start">68320 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Testcases.Loginpagetest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initialization</span>
-                <span class="method-start">68990 ms</span>
+                <span class="method-start">68981 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">loginpage(9701763306, prava@56789, registered user)</span>
-                <span class="method-start">75398 ms</span>
+                <span class="method-start">74679 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closur</span>
-                <span class="method-start">81623 ms</span>
+                <span class="method-start">80423 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">initialization</span>
-                <span class="method-start">82497 ms</span>
+                <span class="method-start">81097 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">loginpage(7386765247, rama@1234, unregistered user)</span>
-                <span class="method-start">89456 ms</span>
+                <span class="method-start">87183 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closur</span>
-                <span class="method-start">115997 ms</span>
+                <span class="method-start">115638 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">initialization</span>
-                <span class="method-start">116769 ms</span>
+                <span class="method-start">116516 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">loginpage(kjlskjdljs, jshdjklsd, bothwrong)</span>
-                <span class="method-start">122813 ms</span>
+                <span class="method-start">137728 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closur</span>
-                <span class="method-start">128938 ms</span>
+                <span class="method-start">143620 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">initialization</span>
-                <span class="method-start">129686 ms</span>
+                <span class="method-start">144288 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">loginpage( ,  , nill)</span>
-                <span class="method-start">142953 ms</span>
+                <span class="method-start">149581 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closur</span>
-                <span class="method-start">148752 ms</span>
+                <span class="method-start">155078 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Testcases.Productavailability</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">later</span>
-                <span class="method-start">149596 ms</span>
+                <span class="method-start">155793 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
