--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,50 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:11:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@957e06]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="a9ada3">  <td>22/02/23 20:08:48</td>   <td>-148745</td> <td title="&gt;&gt;Baseclass.setreports()[pri:0, instance:Testcases.Productavailability@17497425]">&gt;&gt;setreports</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@712974096</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:10:58</td>   <td>-19066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@957e06]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:11:11</td>   <td>-5799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@957e06]">loginpage</td> 
-  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:11:11</td>   <td>-5799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@957e06]">loginpage</td> 
-  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/23 20:09:56</td>   <td>-80546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Demo.closur()[pri:0, instance:Testcases.Demo@31fa1761]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="8ffcb7">  <td>22/02/23 20:09:23</td>   <td>-114087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Productavailability.closur()[pri:0, instance:Testcases.Productavailability@17497425]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:10:58</td>   <td>-19066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@957e06]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:10:58</td>   <td>-19066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@957e06]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:11:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@957e06]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/23 20:09:50</td>   <td>-86849</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.verifyLogo(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Demo@31fa1761]">verifyLogo</td> 
-  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:11:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@957e06]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:11:11</td>   <td>-5799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@957e06]">loginpage</td> 
-  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>22/02/23 20:09:42</td>   <td>-94506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyProduct.closur()[pri:0, instance:Testcases.VerifyProduct@729d991e]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="a9ada3">  <td>22/02/23 20:11:18</td>   <td>845</td> <td title="&lt;&lt;Baseclass.later()[pri:0, instance:Testcases.Productavailability@17497425]">&lt;&lt;later</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@712974096</td>   <td></td> </tr>
-<tr bgcolor="8ffcb7">  <td>22/02/23 20:09:00</td>   <td>-137230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Productavailability.product(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Productavailability@17497425]">product</td> 
-  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="8ffcb7">  <td>22/02/23 20:08:49</td>   <td>-148065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Productavailability.initialization()[pri:0, instance:Testcases.Productavailability@17497425]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>22/02/23 20:09:31</td>   <td>-105659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyProduct.availabilityofproduct(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.VerifyProduct@729d991e]">availabilityofproduct</td> 
-  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>22/02/23 20:09:24</td>   <td>-113208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyProduct.initialization()[pri:0, instance:Testcases.VerifyProduct@729d991e]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:11:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@957e06]">&lt;&lt;closur</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:10:58</td>   <td>-19066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@957e06]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="ae7977">  <td>22/02/23 20:09:43</td>   <td>-93690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Demo.initialization()[pri:0, instance:Testcases.Demo@31fa1761]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>22/02/23 20:11:11</td>   <td>-5799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@957e06]">loginpage</td> 
-  <td>TestNG-tests-1@1671343528</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="f9b8be">  <td>22/02/24 14:01:25</td>   <td>-86759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Demo.closur()[pri:0, instance:Testcases.Demo@729d991e]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="f9b8be">  <td>22/02/24 14:01:13</td>   <td>-98948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Demo.initialization()[pri:0, instance:Testcases.Demo@729d991e]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="8ef0ea">  <td>22/02/24 14:01:00</td>   <td>-112112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyProduct.availabilityofproduct(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.VerifyProduct@1de5f259]">availabilityofproduct</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:41</td>   <td>-10790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="7babf5">  <td>22/02/24 14:00:18</td>   <td>-154386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Productavailability.initialization()[pri:0, instance:Testcases.Productavailability@194bcebf]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:41</td>   <td>-10790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:47</td>   <td>-5498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:47</td>   <td>-5498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="7babf5">  <td>22/02/24 14:00:52</td>   <td>-119601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Productavailability.closur()[pri:0, instance:Testcases.Productavailability@194bcebf]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="8ef0ea">  <td>22/02/24 14:01:12</td>   <td>-99710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyProduct.closur()[pri:0, instance:Testcases.VerifyProduct@1de5f259]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:41</td>   <td>-10790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="8ef0ea">  <td>22/02/24 14:00:53</td>   <td>-118825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyProduct.initialization()[pri:0, instance:Testcases.VerifyProduct@1de5f259]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="7babf5">  <td>22/02/24 14:00:27</td>   <td>-145007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Productavailability.product(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Productavailability@194bcebf]">product</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:41</td>   <td>-10790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Loginpagetest.initialization()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="e6a798">  <td>22/02/24 14:02:53</td>   <td>714</td> <td title="&lt;&lt;Baseclass.later()[pri:0, instance:Testcases.Productavailability@194bcebf]">&lt;&lt;later</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="e6a798">  <td>22/02/24 14:00:17</td>   <td>-155071</td> <td title="&gt;&gt;Baseclass.setreports()[pri:0, instance:Testcases.Productavailability@194bcebf]">&gt;&gt;setreports</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:47</td>   <td>-5498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:47</td>   <td>-5498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Loginpagetest@31fa1761]">loginpage</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="ae7977">  <td>22/02/24 14:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginpagetest.closur()[pri:0, instance:Testcases.Loginpagetest@31fa1761]">&lt;&lt;closur</td> 
+<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="f9b8be">  <td>22/02/24 14:01:19</td>   <td>-92855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo.verifyLogo(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcases.Demo@729d991e]">verifyLogo</td> 
+  <td>main@696933920</td>   <td></td> </tr>
 </table>
